--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,11 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+
     <LinearLayout
-        	android:orientation="horizontal"
-        	android:layout_width="fill_parent"
-        	android:layout_height="0dip"
-        	android:layout_weight="1">
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal" >
 
     			<ImageButton
     			    android:id="@+id/pop_keyboard_Button"
@@ -34,7 +34,7 @@
 <com.google.android.maps.MapView
     android:id="@+id/mapview"
     android:layout_width="fill_parent"
-    android:layout_height="428dp"
+    android:layout_height="fill_parent"
     android:apiKey="@string/googleMap_API"
     android:clickable="true" >
 </com.google.android.maps.MapView>
