--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id ="@+id/navigationBar"
         android:layout_width="fill_parent"
         android:layout_height="80dp"
+        android:layout_alignParentTop="true"
         android:orientation="horizontal" >
-
     			<ImageButton
     			    android:id="@+id/pop_keyboard_Button"
     			    android:layout_width="120dp"
     			    android:layout_height="fill_parent"
     			    android:src="@drawable/selector_find"
     			    android:scaleType="fitCenter" />
-
     			<Button
     			    android:id="@+id/retrieve_Location_Button"
     			    android:layout_width="wrap_content"
@@ -31,12 +31,40 @@
     			    />
 
 	</LinearLayout>
+
 <com.google.android.maps.MapView
     android:id="@+id/mapview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:apiKey="@string/googleMap_API"
-    android:clickable="true" >
+    android:clickable="true"
+    android:layout_below = "@id/navigationBar"
+    >
+
 </com.google.android.maps.MapView>
 
- </LinearLayout>
+<SlidingDrawer
+	android:id="@+id/slidingDrawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:topOffset="50dip" 
+    android:handle = "@+id/handler"
+    android:content = "@+id/POIcontent"
+    android:layout_alignParentBottom="true"
+	>
+    <TextView
+        android:id ="@id/handler"
+        android:text = "test"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+    />
+
+    <TextView
+        android:id="@id/POIcontent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text = "test2" />
+
+</SlidingDrawer>
+
+</RelativeLayout>
