mainMapActivity Add new Search function base on GPS and DEH database add new method to access DEHAPIReceiver content_DetailActivity can read data now

--- a/res/layout/content_detail.xml
+++ b/res/layout/content_detail.xml
@@ -26,8 +26,10 @@
             android:textSize="20dip" />
         </LinearLayout>
         <ScrollView 
+            android:id="@+id/contentScrollView"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
-            />
+            >
+        </ScrollView>
     
 </LinearLayout>
