--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,23 +12,24 @@
         android:orientation="horizontal" >
     			<ImageButton
     			    android:id="@+id/pop_keyboard_Button"
-    			    android:layout_width="120dp"
+    			    android:layout_width="fill_parent"
     			    android:layout_height="fill_parent"
     			    android:src="@drawable/selector_find"
+    			    android:layout_weight="1"
     			    android:scaleType="fitCenter" />
     			<Button
     			    android:id="@+id/retrieve_Location_Button"
-    			    android:layout_width="wrap_content"
+    			    android:layout_width="fill_parent"
     			    android:layout_height="fill_parent"
+    			    android:layout_weight="1"
     			    android:text="@string/retriveButton" />
     			<ImageButton
     			    android:id="@+id/display_list_Button"
-    			    android:layout_width="wrap_content"
+    			    android:layout_width="fill_parent"
     			    android:layout_height="wrap_content"
+    			    android:layout_weight="1"
     			    android:src="@drawable/selector_list"
-    			    android:scaleType = "fitCenter"
-    			    
-    			    />
+    			    android:scaleType = "fitCenter" />
 
 	</LinearLayout>
 
