--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -33,19 +33,14 @@
 
 	</LinearLayout>
 	
-    <SeekBar
-        android:id="@+id/year_seekBar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/mapview"
-        />
+    
 <com.google.android.maps.MapView
     android:id="@+id/mapview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:apiKey="@string/googleMap_API"
     android:clickable="true"
-    android:layout_below = "@id/navigationBar"
+    android:layout_below = "@+id/year_seekBar"
     >
 
 </com.google.android.maps.MapView>
@@ -95,4 +90,26 @@
 
 	</ScrollView>
 </SlidingDrawer>
+
+<SeekBar
+    android:id="@+id/year_seekBar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_below="@id/navigationBar"
+    android:layout_toLeftOf="@+id/year_TextView"
+    android:max="100"
+    android:progress="0" />
+
+<TextView
+    android:id="@+id/year_TextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@id/mapview"
+    android:layout_alignBottom="@+id/year_seekBar"
+    android:layout_alignParentRight="true"
+    android:layout_alignTop="@+id/year_seekBar"
+    android:text="TextView"
+    />
+
 </RelativeLayout>
