--- a/res/layout/social_login.xml
+++ b/res/layout/social_login.xml
@@ -3,6 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-        
+
+    <ImageView
+        android:id="@+id/userPictureImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+
+    <TextView
+        android:id="@+id/userNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NAME" />
+
+    <Button
+        android:id="@+id/facebookLogOutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="登出" />
     
 </LinearLayout>
