--- a/res/layout/content_detail.xml
+++ b/res/layout/content_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -7,9 +7,13 @@
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/content_pic_detaillayout"
         android:layout_width="fill_parent"
         android:layout_height="120dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:layout_alignParentLeft="true"
+    	android:layout_alignParentTop="true"
+     	>
 
         <ImageView
             android:id="@+id/titleImageView"
@@ -17,26 +21,32 @@
             android:layout_height="fill_parent"
             android:contentDescription="mainPic"
             android:scaleType="fitCenter" />
-		<Button
+        
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/descripe_of_POI"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/content_pic_detaillayout"
+            android:paddingRight="5dip"
+            android:textSize="20dip" />
+
+        <Button
             android:id="@+id/likebutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="打卡" />
-        
-        
-        </LinearLayout>
-        <TextView
-            android:id="@+id/descripe_of_POI"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="5dip"
-            android:textSize="20dip" />
-        <ScrollView 
+            android:layout_toRightOf="@+id/descripe_of_POI"
+            android:layout_below="@+id/content_pic_detaillayout"
+            android:text="Like" />
+
+        <ScrollView
             android:id="@+id/contentScrollView"
-            android:layout_height="fill_parent"
             android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/likebutton"
             >
 		
         </ScrollView>
     
-</LinearLayout>
+</RelativeLayout>
