--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 	
-<com.google.android.maps.MapView
+<edu.ncue.im.MyMapView
     android:id="@+id/mapview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +12,7 @@
     android:apiKey="@string/googleMap_API"
     android:clickable="true" >
 
-</com.google.android.maps.MapView>
+</edu.ncue.im.MyMapView>
 
 <SlidingDrawer
 	android:id="@+id/poiDrawer"
