--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -21,5 +21,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="登出" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="搜尋距離" />
+
+    <Spinner
+        android:id="@+id/distance_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
     
 </LinearLayout>
