Facebook function change to 3.0
NFC passport tab implementing

--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -20,4 +20,9 @@
 		    android:title="@string/historytimeline"
 		    android:showAsAction = "ifRoom|withText"
 		    ></item>
+		<item android:id="@+id/nfc_passport"
+		    android:icon="@drawable/ic_action_time"
+		    android:title="@string/nfc_passport"
+		    android:showAsAction = "ifRoom|withText"
+		    ></item>
 	</menu>
