--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -4,29 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/userPictureImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-         />
-
-    <TextView
-        android:id="@+id/userNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NAME" />
-
-    <Button
-        android:id="@+id/facebookLogOutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="登出" />
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="搜尋距離" />
+        android:text="@string/searchDistance" />
 
     <Spinner
         android:id="@+id/distance_spinner"
